--- a/myWork.html
+++ b/myWork.html
@@ -5,17 +5,22 @@
       @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap");
     </style>
     <meta charset="UTF-8" />
+    <meta name="description" content="Elinor Krammings Portfolio" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script defer src="script.js"></script>
     <title>Elinors Portfolio mitt arbete</title>
   </head>
-
+  <!--Body-->
   <body>
-    <!--Navigation-->
+    <!-- Top Navigation-->
     <nav class="top-navigation">
-      <div class="top-navigation-logo">🔌🔌Elinor Kramming</div>
+      <div class="top-navigation-logo">
+        <a href="index.html"
+          ><img src="img/Logo.png" alt="Elinor krammings logotyp"
+        /></a>
+      </div>
       <div class="top-navigation-items">
         <a href="index.html">Hem</a>
         <a href="aboutMe.html">Om mig</a>
@@ -23,10 +28,11 @@
         <a href="contact.html">Kontakt</a>
       </div>
     </nav>
-    <!--maincontent-->
+    <!--main content-->
     <main>
       <h1>Mitt Arbete</h1>
       <p>Ta gärna en titt på arbetet jag har gjort.</p>
+      <!--section about redesigning Chas-->
       <article>
         <div>
           <div class="info-block">
@@ -126,6 +132,7 @@
           </figure>
         </article>
       </section>
+      <!--Flowchart restaurant-->
       <section>
         <article class="info-block info-block--one-column">
           <figure>
@@ -142,6 +149,7 @@
           </div>
         </article>
       </section>
+      <!-- section about Waterbottle shop-->
       <section>
         <article class="info-block info-block--one-column">
           <div class="info-block-text">
@@ -162,69 +170,69 @@
           </figure>
         </article>
       </section>
-      <section></section>
-
-      <!--
-      <section class="flex-container">
-        <img src="img/IschnuraElegansHead.jpeg" alt="Elinor Kramming" />
-
-        <section>
-          <h1>Hej, jag heter Elinor och pluggar UX desig och kravhantering</h1>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged. It was popularised in the 1960s
-            with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum
-          </p>
-        </section>
-      </section>
+      <!-- My CV-->
       <section>
-        <h2>Exempel 1</h2>
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum
-        </p>
+        <article class="info-block info-block--one-column">
+          <div class="info-block-text">
+            <h4>Mitt CV</h4>
+
+            <h5>SOS Barnbyar - Koordinator 2001-2021</h5>
+            <p>
+              Jag började som receptionist på SOS Barnbyar med vanliga
+              arbetsuppgifter såsom att svara i telefon, koppla samtal, svara på
+              informationsmejl, beställa kontorsvaror, ta emot och skicka ut
+              minnesgåvor, ta emot besökare, boka resor. När ekonomiavdelningen
+              hade mycket så hjälpte jag även dem att boka inkommande medel.
+              Sedan gick jag vidare till att vara Fadderansvarig på
+              fadderavdelningen. Där hade jag kontakt med faddrar via mejl och
+              telefon. Vårt internationella kontor och kollegorna där hade jag
+              ett nära samarbete med. Arbetet innebar hantering av av data av
+              känslig karaktär så är insatt i GDPR.
+            </p>
+
+            <p>
+              Min senaste roll var som Koordinator på avdelningen "privat
+              insamling". Där jobbade jag backoffice med kundresor, skicka ut
+              enkäter, informationsbrev till givare, påminnelser både att skicka
+              ut dem men också att sätta upp resor för påminnelser tillsammans
+              med de som driftade vårt CRM system. Jag ansvarade för det dagliga
+              arbetet med autogiro, skickande till Bankoch inläsning i vårt CRM
+              system av de filerna. Registerkontroll, uttag och inläsning av
+              data som tex nya faddrar. Mycket av arbetet i linje med GDPR. Vi
+              höll också på att implementera ett Marketing automation system,
+              click dimension, som jag har jobbat lite i. Jag ingick då i ett
+              team som provade på att jobba mer Agilt. Vi använde då Teams
+              Planner, hade dagliga stand Ups, sprintar, retro mm.
+            </p>
+
+            <h5>Membran - Produktions Assistent 2000 - 2001</h5>
+            <p>
+              Arbete i reception med vanliga arbetsuppgifter så som växel,
+              inkommande och utgående post, boka möten, beställning av
+              kurslitteratur, välkomnande av gäster, ordna fika till
+              kursdeltagare , mm.
+            </p>
+            <h5>Utbildningar</h5>
+            <ul>
+              <li>UX Designer med kravkompetens pågående Chas academy</li>
+              <li>Gränssnittsdesign NTI våren 2021</li>
+              <li>Grundkurs i Insamling, Giva 2010</li>
+              <li>Floristutbildning</li>
+            </ul>
+          </div>
+          <figure>
+            <img
+              class="info-block-image-cv"
+              src="img/Skills-small.png"
+              alt="Elinors färdigheter"
+            />
+          </figure>
+        </article>
       </section>
-      <section>
-        <p>
-          <h2>Exempel 2</h2>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum
-        </p>
-      </section>
-      <div class="information-about">
-        <div class="test1">
-          <img src="img/IschnuraElegansHead.jpeg" alt="Elinor Kramming" />
-        </div>
-        <h1 class="main-h1">
-          Hej, jag heter Elinor och pluggar UX desig och kravhantering
-        </h1>
-        <div>Text om mig här</div>
-      </div>-->
     </main>
-
+    <!--Footer Bottom navigation-->
     <footer class="bottom-navigation">
       <div class="flex-container-footer">
-        <!--<section class="bottom-navigation"></section>-->
         <a href="index.html" class="bottom-navigation active">Hem</a>
         <a href="aboutMe.html" class="bottom-navigation">Om mig</a>
         <a href="myWork.html" class="bottom-navigation active">Arbete</a>
