--- a/aboutMe.html
+++ b/aboutMe.html
@@ -5,16 +5,21 @@
       @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap");
     </style>
     <meta charset="UTF-8" />
+    <meta name="description" content="Elinor Krammings Portfolio" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script defer src="script.js"></script>
     <title>Elinors Portfolio om mig</title>
   </head>
-
+  <!--Body-->
   <body>
     <nav class="top-navigation">
-      <div class="top-navigation-logo">🔌🔌Elinor Kramming</div>
+      <div class="top-navigation-logo">
+        <a href="index.html"
+          ><img src="img/Logo.png" alt="Elinor krammings logotyp"
+        /></a>
+      </div>
       <div class="top-navigation-items">
         <a href="index.html">Hem</a>
         <a class="active" href="aboutMe.html">Om mig</a>
@@ -23,34 +28,33 @@
       </div>
     </nav>
     <main>
-      <section>
-        <h1>Hej, Vad roligt att du vill läsa lite mer om mig!</h1>
-
-        <article class="info-block">
-          <figure>
-            <img
-              class="info-block-image"
-              src="/img/Profil-picture.jpg"
-              alt="Elinor Kramming"
-            />
-          </figure>
-          <div class="info-block-text">
-            <p>
-              Jag har jobbat många år på en barnrättsorganisation och brinner
-              för att göra skillnad i sammhället. Det är en härlig känsla att
-              kunna göra världen till en lite bättre plats genom sitt arbete.
-              Jag har jobbat med mycket kundkontakt och är van att lyssna på vad
-              kunde/användarens behov.
-            </p>
-            <p>
-              Även om jag trivdes mycket bra på min arbetsplats ville jag ta
-              chansen att studera. Genom UX design kan jag kombinera mina
-              kunskaper med mina passioner. Att skapa och att göra en bra sak
-              för människor.
-            </p>
-          </div>
-        </article>
-      </section>
+      <!--main content-->
+      <article class="info-block">
+        <figure>
+          <img
+            class="info-block-image"
+            src="/img/Profil-picture.jpg"
+            alt="Elinor Kramming"
+          />
+        </figure>
+        <div class="info-block-text">
+          <h1>Vad roligt att du vill läsa lite mer om mig!</h1>
+          <p>
+            Jag har jobbat många år på en barnrättsorganisation och brinner för
+            att göra skillnad i sammhället. Det är en härlig känsla att kunna
+            göra världen till en lite bättre plats genom sitt arbete. Jag har
+            jobbat med mycket kundkontakt och är van att lyssna på vad
+            kunden/användarens behov.
+          </p>
+          <p>
+            Även om jag trivdes mycket bra på min arbetsplats ville jag ta
+            chansen att studera. Genom UX design kan jag kombinera mina
+            kunskaper med mina passioner. Att skapa och att göra en bra sak för
+            människor.
+          </p>
+        </div>
+      </article>
+      <!--Section with my passions, text and img-->
       <section>
         <h2>Mina passioner</h2>
         <p>Skapande och naturen är genomgåede i mina passioner.</p>
@@ -59,7 +63,7 @@
             <img
               class="info-block-image"
               src="img/gardening-modified.png"
-              alt=""
+              alt=" storlek på morötter gämförs med tändsticksask"
             />
           </figure>
           <div class="info-block-text">
@@ -87,8 +91,8 @@
           <figure>
             <img
               class="info-block-image"
-              src="/img/garden-wather-modified.png"
-              alt=""
+              src="img/garden-wather-modified.png"
+              alt="liten fontän i gjutgärnskärl"
             />
           </figure>
         </article>
@@ -98,7 +102,7 @@
           <img
             class="info-block-image"
             src="img/Outside-wiev-modified.png"
-            alt=""
+            alt="naturvy med solnedgång och vatten"
           />
         </figure>
         <div class="info-block-text">
@@ -124,7 +128,7 @@
           <figure>
             <img
               class="info-block-image"
-              src="/img/dog-wather-modified.png"
+              src="img/dog-wather-modified.png"
               alt="Hund som badar på strand"
             />
           </figure>
@@ -141,11 +145,7 @@
             </p>
           </div>
           <figure>
-            <img
-              class="info-block-image"
-              src="/img/garden-wather-modified.png"
-              alt=""
-            />
+            <img class="info-block-image" src="img/consert.png" alt="konsert" />
           </figure>
         </article>
       </section>
@@ -160,9 +160,6 @@
         <a href="contact.html" class="bottom-navigation">Kontakt</a>
       </div>
     </footer>
-    <!--
-      Anna kod här nedan
-    -->
 
     <h2>Mina passioner</h2>
     <p>Skapande och naturen är genomgående i mina passioner.</p>
