--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
       @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap");
     </style>
     <meta charset="UTF-8" />
+    <meta name="description" content="Elinor Krammings Portfolio" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script defer src="script.js"></script>
     <title>Elinors Portfolio hem</title>
   </head>
-
+  <!--Body-->
   <body>
     <!--Navigation-->
     <nav class="top-navigation">
-      <div class="top-navigation-logo">Elinor Kramming!!</div>
+      <div class="top-navigation-logo">
+        <a href="index.html"
+          ><img src="img/Logo.png" alt="Elinor krammings logotyp"
+        /></a>
+      </div>
       <div class="top-navigation-items">
         <a class="active">Hem</a>
         <a href="aboutMe.html">Om mig</a>
@@ -37,7 +42,9 @@
           <div>
             <div class="info-block-text">
               <h1>Hej! Jag heter Elinor Krammming</h1>
-              <h3>Jag studerar Ux Design med kravkompetens.</h3>
+              <h2 class="h2-styling">
+                Jag studerar Ux Design med kravkompetens.
+              </h2>
 
               <p>
                 Efter många år av arbete innom en barnrättsorganisation ville
@@ -51,11 +58,14 @@
                 Jag ser mig själv som en kreativ problemlösare som är bra på att
                 lyssna på vad människor behöver.
               </p>
-              <div style="padding-top: 20px; padding-bottom: 20px">
-                <span class="tag">UX</span>
-                <span class="tag">Krav</span>
-                <span class="tag">Design</span>
-                <span class="tag">HTML</span>
+              <div class="tag-container">
+                <div class="tag">
+                  <span class="tag tag1">UX</span>
+                  <span class="tag tag2">Krav</span>
+                  <span class="tag tag3">Design</span>
+                  <span class="tag tag4">HTML</span>
+                  <span class="tag tag5">CSS</span>
+                </div>
               </div>
             </div>
           </div>
@@ -70,7 +80,7 @@
             <img
               class="info-block-image"
               src="img/Chas-Prototyp-Small.png"
-              alt=""
+              alt="Ptototyp Vhas Academy"
             />
           </figure>
           <div class="info-block-text">
@@ -110,7 +120,7 @@
         </article>
       </section>
     </main>
-    <!--footer-->
+    <!--footer and bottom navigation-->
     <footer class="bottom-navigation">
       <div class="flex-container-footer">
         <a href="index.html" class="bottom-navigation active">Hem</a>
