--- a/index.html
+++ b/index.html
@@ -4,24 +4,43 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap");
     </style>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta charset="UTF-8" />
     <meta name="description" content="Elinor Krammings Portfolio" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="manifest" href="/site.webmanifest" />
     <script defer src="script.js"></script>
     <title>Elinors Portfolio hem</title>
   </head>
   <!--Body-->
   <body>
     <!--Navigation-->
-    <nav class="top-navigation">
-      <div class="top-navigation-logo">
+    <nav class="navigation">
+      <div class="navigation-logo">
         <a href="index.html"
           ><img src="img/Logo.png" alt="Elinor krammings logotyp"
         /></a>
       </div>
-      <div class="top-navigation-items">
+      <div class="navigation-items">
         <a class="active">Hem</a>
         <a href="aboutMe.html">Om mig</a>
         <a href="myWork.html">Arbete</a>
@@ -59,13 +78,11 @@
                 lyssna på vad människor behöver.
               </p>
               <div class="tag-container">
-                <div class="tag">
-                  <span class="tag tag1">UX</span>
-                  <span class="tag tag2">Krav</span>
-                  <span class="tag tag3">Design</span>
-                  <span class="tag tag4">HTML</span>
-                  <span class="tag tag5">CSS</span>
-                </div>
+                <span class="tag tag1">UX</span>
+                <span class="tag tag2">Krav</span>
+                <span class="tag tag3">Design</span>
+                <span class="tag tag4">HTML</span>
+                <span class="tag tag5">CSS</span>
               </div>
             </div>
           </div>
@@ -75,59 +92,66 @@
       <section>
         <h2>Mitt Arbete</h2>
         <p class="no-margin--top">Här följer några arbeten som jag gjort.</p>
-        <article class="info-block info-block--one-column">
-          <figure>
-            <img
-              class="info-block-image"
-              src="img/Chas-Prototyp-Small.png"
-              alt="Ptototyp Vhas Academy"
-            />
-          </figure>
-          <div class="info-block-text">
-            <h3>Redesign av Chas Academys webbplats</h3>
-            <p>
-              Chas Academy behövde uppdatera sin webbplats och som en del av
-              utbildningen kunde vi då välja att titta närmare på den. Det känns
-              bra att få arbeta med ett projekt där våra ideér kan bli
-              verklighet.
-            </p>
-          </div>
-        </article>
+        <a href="myWork.html#chas">
+          <article class="info-block info-block--one-column">
+            <figure>
+              <img
+                class="info-block-image"
+                src="img/Chas-Prototyp-Small.png"
+                alt="Ptototyp Vhas Academy"
+              />
+            </figure>
+            <div class="info-block-text">
+              <h2>Redesign av Chas Academys webbplats</h2>
+              <p>
+                Chas Academy behövde uppdatera sin webbplats och som en del av
+                utbildningen kunde vi då välja att titta närmare på den. Det
+                känns bra att få arbeta med ett projekt där våra ideér kan bli
+                verklighet.
+              </p>
+            </div>
+          </article>
+        </a>
       </section>
       <section>
-        <article class="info-block info-block--one-column">
-          <div class="info-block-text">
-            <h3>Agera kravställare till lansering av matapp/Foodora</h3>
-            <p>
-              Tillsammans med min grupp ska vi skapa krav för en tilltänkt
-              matapp. Vi håller en workshop med kunden för att komma fram till
-              vad de är ute efter. Vi börjar med en lätt icebreaker för att få
-              igång ideer och känna oss tryggare i gruppen. Kunden får sedan
-              brainstorma kring frågan "När du ska beställa mat vad är viktigt
-              för dig då?" Först enskilt sedan i grupp. Nästa fråga blir Om fem
-              år, hur skulle Foodora se ut då? Innan vi avslutar workshopen så
-              får alla rösta med hjälp av tre prickar på de förslagen de tycker
-              är viktigast.
-            </p>
-          </div>
-          <figure>
-            <img
-              class="info-block-image"
-              src="img/behovskarta-Foodora-Small.png"
-              alt="Behovskarta matapp"
-            />
-          </figure>
-        </article>
+        <a href="myWork.html#food">
+          <article class="info-block info-block--one-column">
+            <div class="info-block-text">
+              <h2>Agera kravställare till lansering av matapp/Foodora</h2>
+              <p>
+                Tillsammans med min grupp ska vi skapa krav för en tilltänkt
+                matapp. Vi håller en workshop med kunden för att komma fram till
+                vad de är ute efter. Vi börjar med en lätt icebreaker för att få
+                igång ideer och känna oss tryggare i gruppen. Kunden får sedan
+                brainstorma kring frågan "När du ska beställa mat vad är viktigt
+                för dig då?" Först enskilt sedan i grupp. Nästa fråga blir Om
+                fem år, hur skulle Foodora se ut då? Innan vi avslutar
+                workshopen så får alla rösta med hjälp av tre prickar på de
+                förslagen de tycker är viktigast.
+              </p>
+            </div>
+            <figure>
+              <img
+                class="info-block-image"
+                src="img/behovskarta-Foodora-Small.png"
+                alt="Behovskarta matapp"
+              />
+            </figure>
+          </article>
+        </a>
       </section>
     </main>
     <!--footer and bottom navigation-->
-    <footer class="bottom-navigation">
-      <div class="flex-container-footer">
-        <a href="index.html" class="bottom-navigation active">Hem</a>
-        <a href="aboutMe.html" class="bottom-navigation">Om mig</a>
-        <a href="myWork.html" class="bottom-navigation">Arbete</a>
-        <a href="contact.html" class="bottom-navigation">Kontakt</a>
-      </div>
+
+    <footer>
+      <nav class="navigation">
+        <div class="navigation-items">
+          <a href="#" class="active">Hem</a>
+          <a href="aboutMe.html">Om mig</a>
+          <a href="myWork.html">Arbete</a>
+          <a href="contact.html">Kontakt</a>
+        </div>
+      </nav>
     </footer>
   </body>
 </html>
