--- a/myWork.html
+++ b/myWork.html
@@ -4,6 +4,23 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap");
     </style>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
     <meta charset="UTF-8" />
     <meta name="description" content="Elinor Krammings Portfolio" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,16 +32,16 @@
   <!--Body-->
   <body>
     <!-- Top Navigation-->
-    <nav class="top-navigation">
-      <div class="top-navigation-logo">
+    <nav class="navigation">
+      <div class="navigation-logo">
         <a href="index.html"
           ><img src="img/Logo.png" alt="Elinor krammings logotyp"
         /></a>
       </div>
-      <div class="top-navigation-items">
+      <div class="navigation-items">
         <a href="index.html">Hem</a>
         <a href="aboutMe.html">Om mig</a>
-        <a class="active" href="myWork.html">Arbete</a>
+        <a href="#" class="active">Arbete</a>
         <a href="contact.html">Kontakt</a>
       </div>
     </nav>
@@ -33,9 +50,9 @@
       <h1>Mitt Arbete</h1>
       <p>Ta gärna en titt på arbetet jag har gjort.</p>
       <!--section about redesigning Chas-->
-      <article>
+      <article class="margin-bottom">
         <div>
-          <div class="info-block">
+          <div class="info-block" id="chas">
             <figure>
               <img
                 class="info-block-image"
@@ -126,6 +143,7 @@
           <figure>
             <img
               class="info-block-image"
+              id="food"
               src="img/behovskarta-Foodora-Small.png"
               alt="Behovskarta Foodora"
             />
@@ -153,7 +171,7 @@
       <section>
         <article class="info-block info-block--one-column">
           <div class="info-block-text">
-            <h3>App försäljning av vattenflaskor</h3>
+            <h2>App försäljning av vattenflaskor</h2>
             <p>
               En enkel app som säljer vattenflaskor, här ville jag skapa en
               känsla av vatten, enkelhel och fräschet.Färgerna går i grönt som
@@ -174,9 +192,9 @@
       <section>
         <article class="info-block info-block--one-column">
           <div class="info-block-text">
-            <h4>Mitt CV</h4>
+            <h3>Mitt CV</h3>
 
-            <h5>SOS Barnbyar - Koordinator 2001-2021</h5>
+            <h4>SOS Barnbyar - Koordinator 2001-2021</h4>
             <p>
               Jag började som receptionist på SOS Barnbyar med vanliga
               arbetsuppgifter såsom att svara i telefon, koppla samtal, svara på
@@ -205,7 +223,7 @@
               Planner, hade dagliga stand Ups, sprintar, retro mm.
             </p>
 
-            <h5>Membran - Produktions Assistent 2000 - 2001</h5>
+            <h4>Membran - Produktions Assistent 2000 - 2001</h4>
             <p>
               Arbete i reception med vanliga arbetsuppgifter så som växel,
               inkommande och utgående post, boka möten, beställning av
@@ -231,13 +249,15 @@
       </section>
     </main>
     <!--Footer Bottom navigation-->
-    <footer class="bottom-navigation">
-      <div class="flex-container-footer">
-        <a href="index.html" class="bottom-navigation active">Hem</a>
-        <a href="aboutMe.html" class="bottom-navigation">Om mig</a>
-        <a href="myWork.html" class="bottom-navigation active">Arbete</a>
-        <a href="contact.html" class="bottom-navigation">Kontakt</a>
-      </div>
+    <footer>
+      <nav class="navigation">
+        <div class="navigation-items">
+          <a href="index.html">Hem</a>
+          <a href="aboutMe.html">Om mig</a>
+          <a href="#" class="active">Arbete</a>
+          <a href="contact.html">Kontakt</a>
+        </div>
+      </nav>
     </footer>
   </body>
 </html>
