--- a/aboutMe.html
+++ b/aboutMe.html
@@ -50,7 +50,7 @@
         <figure>
           <img
             class="info-block-image"
-            src="/img/ProfilPic2.jpg"
+            src="img/ProfilPic2.jpg"
             alt="Elinor Kramming"
           />
         </figure>
@@ -98,7 +98,7 @@
           <figure>
             <img
               class="info-block-image"
-              src="/img/garden-wather-modified.png"
+              src="img/garden-wather-modified.png"
               alt=""
             />
           </figure>
@@ -132,7 +132,7 @@
           <figure>
             <img
               class="info-block-image"
-              src="/img/dog-wather-modified.png"
+              src="img/dog-wather-modified.png"
               alt="Hund som badar på strand"
             />
           </figure>
@@ -167,7 +167,7 @@
           <figure>
             <img
               class="info-block-image"
-              src="/img/garden-wather-modified.png"
+              src="img/garden-wather-modified.png"
               alt=""
             />
           </figure>
